<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lifeguard</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_configuration">Konfiguration</string>
    <string name="configuration_label_delay">Auslösedauer (in Sekunden)</string>
    <string name="configuration_user_name_label">Name (für den Empfänger des Alarms)</string>
    <string name="configuration_label_repeat_delay">Alarm erneut auslösen nach (Sekunden)</string>
    <string name="configuration_label_button_delay">Alarm bei Knopfdruck für n Millisekunden auslösen</string>
    <string name="configuration_label_save">Speichern</string>
    <string name="configuration_label_cancel">Abbrechen</string>
    <string name="title_activity_contact_list">Kontakte</string>
    <string name="action_configuration">Konfiguration</string>
    <string name="action_contact_list">Empfänger</string>
    <string name="main_label_delay">Verbleibende Zeit</string>
    <string name="main_value_delay">00:10:00</string>
    <string name="main_label_sos">SOS</string>
    <string name="main_label_alarm_switch">Alarmierung bei Zeitüberschreitung</string>
    <string name="title_activity_contact_detail">Kontaktangaben</string>
    <string name="contact_detail_label_name">Name</string>
    <string name="contact_detail_hint_name">John Doe</string>
    <string name="contact_detail_error_name">Name is required</string>
    <string name="contact_detail_label_phone">Telefonnummer</string>
    <string name="contact_detail_hint_phone">+41791234567</string>
    <string name="contact_detail_error_phone">Phone number is required and must be of valid format, e.g. +41791234567</string>
    <string name="contact_detail_label_position">Position</string>
    <string name="contact_detail_label_save">Speichern</string>
    <string name="contact_detail_label_cancel">Abbrechen</string>
    <string name="operation_cancelled">Abgebrochen</string>
    <string name="contact_list_confirm_delete">
<![CDATA[
        Soll %s gelöscht werden?
    ]]>
    </string>
    <string name="action_add_contact">Kontakt hinzufügen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="main_label_cancel">Cancel</string>

    <!-- Configuration Keys -->
    <string name="userNameConfigurationKey">userName</string>
    <string name="alarmDelayConfigurationKey">alarmDelay</string>
    <string name="alarmRepeatDelayConfigurationKey">alarmRepeatDelay</string>
    <string name="alarmButtonDelayConfigurationKey">alarmButtonDelay</string>

    <!-- Alarm Message -->
    <!--
         Parameters:
         {0} username
    -->
    <string name="alarm_message_format_string">
<![CDATA[
{0} braucht dringend Deine Hilfe!
Bitte bestätige dieses SMS und eile so schnell wie möglich herbei!
]]>
    </string>
    <!-- Default username -->
    <string name="alarm_message_default_entry">Der Absender</string>

    <!-- Alarm display message - text to display after an alarm has been sent. -->
    <!--
         Parameters:
         {0} name
         {1} phone number
    -->
    <string name="alarm_display_message_text"><![CDATA[{0} wurde alarmiert (Tel: {1})]]></string>

    <!-- Alarm confirmation message - text to display after an alarm has been confirmed. -->
    <!--
         Parameters:
         {0} name
         {1} phone number
    -->
    <string name="alarm_confirmation_message_text"><![CDATA[{0} eilt zur Hilfe!]]></string>

</resources>