<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigurationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:text="@string/configuration_user_name_label" />

        <EditText
            android:id="@+id/configurationUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:text="@string/configuration_label_delay" />

        <EditText
            android:id="@+id/configurationDelay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:text="@string/configuration_label_repeat_delay" />

        <EditText
            android:id="@+id/configurationRepeatDelay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <!--
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:text="@string/configuration_label_button_delay" />

        <EditText
            android:id="@+id/configurationButtonDelay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>
    -->

    <Button
        android:id="@+id/saveConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="saveConfiguration"
        android:text="@string/configuration_label_save" />

    <Button
        android:id="@+id/cancelConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="cancelConfiguration"
        android:text="@string/configuration_label_cancel" />

</LinearLayout>